fixed layout problem and card bg

--- a/client/src/animations/SpotLightCard.css
+++ b/client/src/animations/SpotLightCard.css
@@ -2,7 +2,7 @@
   position: relative;
   border-radius: 1.5rem;
   border: 1px solid #222;
-  background-color: #d5d5d5;
+  background-color: #e2e2e2;
   padding: 2rem;
   overflow: hidden;
   --mouse-x: 50%;
